moved social into a macro
See https://github.com/Keats/gutenberg/issues/208

--- a/templates/base.html
+++ b/templates/base.html
@@ -113,8 +113,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col s6" >
-						{% include "social.html" %}
-										</div>
+						{{ macros::social(config=config, page=page) }}
+					</div>
 					<div class="col s3">
 						<a class="{{ config.extra.materialize.colorscheme.font.three }}-text text-light" href="{{ get_url(path="sitemap.xml") }}">
 							Sitemap
