--- a/templates/macros.html
+++ b/templates/macros.html
@@ -40,7 +40,7 @@
 	</div>
 {% endmacro post_header %}
 {% macro social(config, page) %}
-<span class="icon-row">
+<span class="icon_row">
 	<!-- social -->
 	{% if config.extra.materialize.social.facebook %}
 		<a href="https://facebook.com/{{ config.extra.materialize.social.facebook }}" aria-label="Facebook">
@@ -78,7 +78,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	{% if config.extra.materialize.social.hackernews %}
 		<a href="https://news.ycombinator.com/user?id={{ config.extra.materialize.social.hackernews }}" aria-label="Hacker news">
 			<svg class="icon icon-hackernews" viewBox="0 0 24 28" aria-hidden="true">
@@ -115,7 +115,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	<!-- chat stuff -->
 	{% if config.extra.materialize.social.skype %}
 			<script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
@@ -166,7 +166,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	<!-- show and tell -->
 	{% if config.extra.materialize.social.pinterest %}
 		<a href="https://pinterest.com/{{ config.extra.materialize.social.pinterest }}/" aria-label="Pinterest">
@@ -204,7 +204,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	<!-- sound -->
 	{% if config.extra.materialize.social.songkick %}
 		<a href="https://songkick.com/artists{{ config.extra.materialize.social.songkick }}/" aria-label="Songkick">
@@ -235,7 +235,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	<!-- artsy -->
 	{% if config.extra.materialize.social.deviantart %}
 		<a href="https://{{config.extra.materialize.social.deviantart }}.deviantart.com" aria-label="Deviantart">
@@ -267,7 +267,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	<!-- video -->
 	{% if config.extra.materialize.social.youtube %}
 		<a href="https://youtube.com/channel/{{ config.extra.materialize.social.youtube }}/" aria-label="Youtube">
@@ -291,7 +291,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	<!-- coding -->
 	{% if config.extra.materialize.social.github %}
 		<a href="https://github.com/{{ config.extra.materialize.social.github }}" aria-label="GitHub">
@@ -322,7 +322,7 @@
 		</a>
 	{% endif %}
 </span>
-<span class="icon-row">
+<span class="icon_row">
 	<!-- professionalish -->
 	{% if config.extra.materialize.social.email %}
 		<a href="mailto:{{ config.extra.materialize.social.email }}" aria-label="Email">
