--- a/templates/paralax.html
+++ b/templates/paralax.html
@@ -49,6 +49,14 @@
 		padding-right: 1rem;
 		margin: 0 auto;
 	}
+	.icon {
+		width: 32px;
+		height: 42px;
+	}
+	.icon_row {
+		height: 42px;
+	}
+
 </style>
 {% endblock extra_head %}
 
