removed page parameter from social macro
that does not work in tag/tags/category/categories

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 			{% endif %}
 		</ul>
 		<ul class="center-align">
-			{{ macros::social(config=config, page=page) }}
+			{{ macros::social(config=config) }}
 		</ul>
 	</header>
 {% endblock sidebar %}
