--- a/templates/macros.html
+++ b/templates/macros.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 {% endmacro post_header %}
-{% macro social(config, page) %}
+{% macro social(config) %}
 <span class="icon_row">
 	<!-- social -->
 	{% if config.extra.materialize.social.facebook %}
