--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col s6" >
-							{{ macros::social(config=config, page=page) }}
+							{{ macros::social(config=config) }}
 						</div>
 						<div class="col s3">
 							<a class="{{ config.extra.materialize.colorscheme.font.three }}-text text-light" href="{{ get_url(path="sitemap.xml") }}">
