--- a/templates/tags.html
+++ b/templates/tags.html
@@ -20,10 +20,13 @@
 	<ul class="collection">
 		{% for tag in tags %}
 			<li class="collection-item">
-				<a class="title" href="/tags/{{ tag.slug }}">Tag: {{ tag.name }}</a>
+				Tag: <a class="chip {{ config.extra.materialize.colorscheme.background.two }}" href="{{ tag.permalink }}">{{ tag.name }}</a>
 				<p>
 					{{ tag.pages | length }} post{{ tag.pages | length | pluralize }}
 				</p>
+				{% for subpage in tag.pages %}
+					<a class="chip {{ config.extra.materialize.colorscheme.background.one }}" href="{{ subpage.permalink }}">{{ subpage.title }}</a>
+				{% endfor %}
 			</li>
 		{% endfor %}
 	</ul>
