--- a/templates/macros.html
+++ b/templates/macros.html
@@ -12,7 +12,7 @@
 		<div class="col s3">
 			{% if page.category %}
 				Category: 
-				<span class="chip {{ config.extra.materialize.colorscheme.background.two }} ">
+				<span class="chip {{ config.extra.materialize.colorscheme.font.one }}-text {{ config.extra.materialize.colorscheme.background.two }} ">
 					<a class="title" href="/categories/{{ page.category }}">{{ page.category }}</a>
 				</span>
 			{% endif %}
@@ -21,7 +21,7 @@
 			{% if page.tags %}
 				Tags: 
 				{% for tag in page.tags %}
-					<span class="chip {{ config.extra.materialize.colorscheme.background.one }} ">
+					<span class="chip {{ config.extra.materialize.colorscheme.background.two }}-text {{ config.extra.materialize.colorscheme.background.one }} ">
 						<a href="{{ get_url(path="tags") }}{{ tag | slugify }}">{{ tag }}</a>
 					</span>
 				{% endfor %}
