--- a/templates/category.html
+++ b/templates/category.html
@@ -15,6 +15,8 @@
 {% endblock meta %}
 
 {% block main %}
+	<h1>Category: {{ category.name }}</h1>
+	<h2 class="chip {{ config.extra.materialize.colorscheme.font.two }}-text {{ config.extra.materialize.colorscheme.background.one }}">{{ category.name }}</h2>
 	<ul class="collection">
 		{% for page in category.pages %}
 			<li class="collection-item">
