--- a/templates/paralax.html
+++ b/templates/paralax.html
@@ -74,12 +74,12 @@
 					{% endif %}
 					{% if page.extra.paralax.images.one.subtitle %}
 					<div class="row center">
-						<h5 class="header col s12 light">{{ page.extra.paralax.images.one.subtitle }}</h5>
+						<h5 class="header col s12 light {{config.extra.materialize.colorscheme.font.two }}-text">{{ page.extra.paralax.images.one.subtitle }}</h5>
 					</div>
 					{% endif %}
 					{% if page.extra.paralax.images.one.cta %}
 					<div class="row center">
-						<a href="{{ page.extra.paralax.images.one.cta.url }}" id="download-button" class="btn-large waves-effect waves-light {{ page.extra.paralax.images.one.cta.pulse }} {{ config.extra.materialize.colorscheme.background.one  }} lighten-1">{{ page.extra.paralax.images.one.cta.name }}</a>
+						<a href="{{ page.extra.paralax.images.one.cta.url }}" id="download-button" class="btn-large waves-effect waves-light {{ page.extra.paralax.images.one.cta.pulse }} {{config.extra.materialize.colorscheme.font.three }}-text {{ config.extra.materialize.colorscheme.background.one }} lighten-1">{{ page.extra.paralax.images.one.cta.name }}</a>
 					</div>
 					{% endif %}
 					<br>
@@ -168,17 +168,17 @@
 				<div class="container">
 					<div class="row center">
 						{% if page.extra.paralax.images.two.title %}
-							<h1 class="header center {{ config.extra.materialize.colorscheme.font.one  }}-text text-lighten-2">{{ page.extra.paralax.images.two.title }}</h1>
+							<h1 class="header center {{ config.extra.materialize.colorscheme.font.one }}-text text-lighten-2">{{ page.extra.paralax.images.two.title }}</h1>
 							{% endif %}
 							{% if page.extra.paralax.images.two.subtitle %}
 							<div class="row center">
-								<h5 class="header col s12 light">{{ page.extra.paralax.images.two.subtitle }}</h5>
+								<h5 class="header col s12 {{ config.extra.materialize.colorscheme.font.two }}-text light">{{ page.extra.paralax.images.two.subtitle }}</h5>
 							</div>
 						{% endif %}
 					</div>
 					{% if page.extra.paralax.images.two.cta %}
 					<div class="row center">
-						<a href="{{ page.extra.paralax.images.two.cta.url }}" id="download-button" class="btn-large waves-effect waves-light {{ page.extra.paralax.images.two.cta.pulse }} {{ config.extra.materialize.colorscheme.background.one }} lighten-1">{{ page.extra.paralax.images.two.cta.name }}</a>
+						<a href="{{ page.extra.paralax.images.two.cta.url }}" id="download-button" class="btn-large waves-effect waves-light {{ page.extra.paralax.images.two.cta.pulse }} {{ config.extra.materialize.colorscheme.font.three }}-text {{ config.extra.materialize.colorscheme.background.one }} lighten-1">{{ page.extra.paralax.images.two.cta.name }}</a>
 					</div>
 					{% endif %}
 				</div>
@@ -210,13 +210,13 @@
 						{% endif %}
 						{% if page.extra.paralax.images.three.subtitle %}
 							<div class="row center">
-								<h5 class="header col s12 light">{{ page.extra.paralax.images.three.subtitle }}</h5>
+								<h5 class="header col s12 {{ config.extra.materialize.colorscheme.font.two }}-text light">{{ page.extra.paralax.images.three.subtitle }}</h5>
 							</div>
 							{% endif %}
 						</div>
 						{% if page.extra.paralax.images.three.cta %}
 						<div class="row center">
-							<a href="{{ page.extra.paralax.images.three.cta.url }}" id="download-button" class="btn-large waves-effect waves-light {{ page.extra.paralax.images.three.cta.pulse }} {{ config.extra.materialize.colorscheme.background.one }} lighten-1">{{ page.extra.paralax.images.three.cta.name }}</a>
+							<a href="{{ page.extra.paralax.images.three.cta.url }}" id="download-button" class="btn-large waves-effect waves-light {{ page.extra.paralax.images.three.cta.pulse }} {{ config.extra.materialize.colorscheme.font.three }}-text {{ config.extra.materialize.colorscheme.background.one }} lighten-1">{{ page.extra.paralax.images.three.cta.name }}</a>
 						</div>
 						{% endif %}
 					</div>
