--- a/templates/macros.html
+++ b/templates/macros.html
@@ -4,14 +4,16 @@
 			{{ page.title }} 
 		</a>
 	</h1>
-	<h2>{{ page.description }}</h2>
+	{% if page.description != page.title %} 
+		<h3>{{ page.description }}</h3>
+	{% endif %}
 	{% if page.extra.show_read_time %}
 		({{ page.reading_time + 1}} minutes read)
 	{% endif %}
 	<div class="row">
 		<div class="col s3">
 			{% if page.category %}
-				Category: 
+				Category:
 				<span class="chip {{ config.extra.materialize.colorscheme.font.one }}-text {{ config.extra.materialize.colorscheme.background.two }} ">
 					<a class="title" href="/categories/{{ page.category }}">{{ page.category }}</a>
 				</span>
@@ -19,7 +21,7 @@
 		</div>
 		<div class="col s3">
 			{% if page.tags %}
-				Tags: 
+				Tags:
 				{% for tag in page.tags %}
 					<span class="chip {{ config.extra.materialize.colorscheme.background.two }}-text {{ config.extra.materialize.colorscheme.background.one }} ">
 						<a href="{{ get_url(path="tags") }}{{ tag | slugify }}">{{ tag }}</a>
